# fatoolsng

./: .gitignore  AUTHORS  README.md  pyproject.toml  setup.py
docs/: query_selector.py  tutorial.txt
fatools/lib/: params.py  snippet.py  utils.py
fatools/lib/analytics/: analyticalset.py  ca.py  djost_demetics.py  export.py  fst_arlequin.py  haploset.py  he.py  ld_lian.py  moi.py  nj.py  query.py  selector.py  summary.py
fatools/lib/fautil/: algo.py  algo2.py  alignutils.py  binsutil.py  dpalign.py  gmalign.py  hcalign.py  mixin.py  peakalign.py  pmalign.py  traceio.py  wavelen2rgb.py
fatools/lib/sqlmodels/: handler_interface.py  schema.py
fatools/lib/sqlmodels2/: schema.py
fatools/scripts/: analyze.py  binsutil.py  convert.py  dbmgr.py  fa.py  facmd.py  fautil.py  run.py
fatoolsng/lib/: const.py  params.py  snippet.py  utils.py
fatoolsng/lib/analytics/: alleles.py  analyticalset.py  ca.py  correlation.py  dataframes.py  dist.py  djost_demetics.py  export.py  fst_arlequin.py  haploset.py  ld_lian.py  moi.py  nj.py  query.py  sampleset.py  selector.py  summary.py
fatoolsng/lib/fautil/: algo.py  algo2.py  alignutils.py  binsutil.py  cmds.py  dpalign.py  gmalign.py  hcalign.py  mixin.py  mixin2.py  peakalign.py  peakcache.py  plot.py  pmalign.py  traceio.py  traceutils.py  wavelen2rgb.py
fatoolsng/lib/fautil/_xxx/: fautils.py  old_peakalign.py
fatoolsng/lib/fileio/: models.py
fatoolsng/lib/fsmodels/: models.py
fatoolsng/lib/gui/: viewer.py
fatoolsng/lib/sqlmodels/: __init__.py  handler.py  handler_interface.py  schema.py  setup.py
fatoolsng/lib/sqlmodels2/: handler.py  handler_interface.py  schema.py  setup.py
fatoolsng/scripts/: analyze.py  binsutil.py  convert.py  dbmgr.py  fa.py  facmd.py  fautil.py  run.py
fatoolsng/tests/: test_algo.py  test_algo2.py  test_alignment.py  test_alignutils.py  test_const.py  test_cwt.py  test_params.py  test_peakcache.py
